Simplified building examples. Switched to TARGETS cmake generator.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -7,7 +7,7 @@ SET( BUILD_EXAMPLES ON CACHE BOOL "Build example projects.")
 PROJECT( Geometry )
 
 INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
-CONAN_BASIC_SETUP()
+CONAN_BASIC_SETUP(TARGETS)
 
 INCLUDE_DIRECTORIES(
 	../include
@@ -40,25 +40,27 @@ SET( INCLUDE_FILES
 	../include/fitProjectiveTransform.h
 )
 
-
 SET( SOURCE_FILES
 	../src/BoundingBox.cpp
 	../src/ScanLine.cpp
 )
-
 
 ADD_LIBRARY( ${PROJECT_NAME} STATIC
 	${INCLUDE_FILES}
 	${SOURCE_FILES}
 )
 
-CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
+	CONAN_PKG::NamedType
+	CONAN_PKG::eigen
+	CONAN_PKG::boost_qvm
+)
 
 SOURCE_GROUP( "Header Files\\QVM" FILES ${INCLUDE_FILES_QVM} )
 
 SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Algorithms")
 
 IF(BUILD_EXAMPLES)
-	ADD_SUBDIRECTORY( ../test ${CMAKE_CURRENT_BINARY_DIR}.test )
+	ADD_SUBDIRECTORY( ../test ${CMAKE_CURRENT_BINARY_DIR}/test )
 ENDIF()
 
