--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 PROJECT( Geometry_Tests )
 
 SET( BUILD_EXAMPLE_COORDINATE_TRANSFORM OFF CACHE BOOL "-" )
-SET( BUILD_EXAMPLE_POJECTIVE_TRANSFORM OFF CACHE BOOL "-" )
+SET( BUILD_EXAMPLE_PROJECTIVE_TRANSFORM OFF CACHE BOOL "-" )
 SET( BUILD_EXAMPLE_CONVEX_HULL OFF CACHE BOOL "-" )
 SET( BUILD_EXAMPLE_OPERATIONS OFF CACHE BOOL "-" )
 
@@ -14,15 +14,15 @@ ADD_CUSTOM_TARGET( Geometry_Test_Common SOURCES
 SET_PROPERTY( TARGET Geometry_Test_Common PROPERTY FOLDER "Tests")
 
 IF( BUILD_EXAMPLE_COORDINATE_TRANSFORM )
-	ADD_SUBDIRECTORY( test_coordinateTransform/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_coordinateTransform)
+	ADD_SUBDIRECTORY( test_coordinate_transform/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_coordinate_transform)
 ENDIF( )
 
-IF( BUILD_EXAMPLE_POJECTIVE_TRANSFORM )
-	ADD_SUBDIRECTORY( test_projectiveTransform/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_projectiveTransform)
+IF( BUILD_EXAMPLE_PROJECTIVE_TRANSFORM )
+	ADD_SUBDIRECTORY( test_projective_transform/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_projective_transform)
 ENDIF( )
 
 IF( BUILD_EXAMPLE_CONVEX_HULL )
-	ADD_SUBDIRECTORY( test_convexHull/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_convexHull)
+	ADD_SUBDIRECTORY( test_convex_hull/cmake ${CMAKE_CURRENT_BINARY_DIR}/test_convex_hull)
 ENDIF( )
 
 IF( BUILD_EXAMPLE_OPERATIONS )
