--- a/test/test_coordinate_transform/cmake/CMakeLists.txt
+++ b/test/test_coordinate_transform/cmake/CMakeLists.txt
@@ -2,11 +2,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
 PROJECT( Geometry_Test_CoordinateTransform)
 
-INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
-CONAN_BASIC_SETUP()
-
 ADD_DEFINITIONS(-D_CRT_DEPRECATE_NO_WARNINGS)
 ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE)
+ADD_DEFINITIONS(-D_SILENCE_CXX17_ADAPTOR_TYPEDEFS_DEPRECATION_WARNING)
 ADD_DEFINITIONS(-DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE)
 
 FIND_PACKAGE( Qt5Core )
@@ -31,6 +29,10 @@ TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
 	Glu32
 	Opengl32
 	Geometry
+	CONAN_PKG::NamedType
+	CONAN_PKG::eigen
+	CONAN_PKG::boost_qvm
+	CONAN_PKG::openscenegraph
 )
 
 CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})
