--- a/test/test_operations/cmake/CMakeLists.txt
+++ b/test/test_operations/cmake/CMakeLists.txt
@@ -2,9 +2,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
 PROJECT( Geometry_Test_Operations)
 
-INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
-CONAN_BASIC_SETUP()
-
 ADD_DEFINITIONS(-D_CRT_DEPRECATE_NO_WARNINGS)
 ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE)
 
@@ -19,6 +16,9 @@ ADD_EXECUTABLE( ${PROJECT_NAME}
 
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
 	Geometry
+	CONAN_PKG::NamedType
+	CONAN_PKG::eigen
+	CONAN_PKG::boost_qvm
 )
 
 CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})
