--- a/test/test_convex_hull/cmake/CMakeLists.txt
+++ b/test/test_convex_hull/cmake/CMakeLists.txt
@@ -5,9 +5,6 @@ PROJECT( Geometry_Test_ConvexHull)
 ADD_DEFINITIONS(-D_CRT_DEPRECATE_NO_WARNINGS)
 ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE)
 
-INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
-CONAN_BASIC_SETUP()
-
 INCLUDE_DIRECTORIES(
 	../../../include
 	../../common
@@ -19,6 +16,9 @@ ADD_EXECUTABLE( ${PROJECT_NAME}
 
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
 	Geometry
+	CONAN_PKG::NamedType
+	CONAN_PKG::eigen
+	CONAN_PKG::boost_qvm
 )
 
 CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})
