--- a/test/test_projective_transform/cmake/CMakeLists.txt
+++ b/test/test_projective_transform/cmake/CMakeLists.txt
@@ -2,9 +2,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
 PROJECT( Geometry_Test_ProjectiveTransform)
 
-INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
-CONAN_BASIC_SETUP()
-
 ADD_DEFINITIONS(-D_SILENCE_CXX17_ADAPTOR_TYPEDEFS_DEPRECATION_WARNING)
 
 INCLUDE_DIRECTORIES(
@@ -18,6 +15,9 @@ ADD_EXECUTABLE( ${PROJECT_NAME}
 
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
 	Geometry
+	CONAN_PKG::NamedType
+	CONAN_PKG::eigen
+	CONAN_PKG::boost_qvm
 )
 
 CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})
