Simplified build process

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -2,12 +2,36 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )
 
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 
-SET( BUILD_EXAMPLES ON CACHE BOOL "Build example projects.")
+SET( BUILD_EXAMPLE_COORDINATE_TRANSFORM OFF CACHE BOOL "-" )
+SET( BUILD_EXAMPLE_PROJECTIVE_TRANSFORM OFF CACHE BOOL "-" )
+SET( BUILD_EXAMPLE_CONVEX_HULL OFF CACHE BOOL "-" )
+SET( BUILD_EXAMPLE_OPERATIONS OFF CACHE BOOL "-" )
 
 PROJECT( Geometry )
 
-INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
-CONAN_BASIC_SETUP(TARGETS)
+FUNCTION( STRING_FROM_BOOL VAR_STRING VAR_BOOL )
+	IF( ${VAR_BOOL} )
+		SET( ${VAR_STRING} "True" PARENT_SCOPE )
+	ELSE( ${VAR_BOOL} )
+		SET( ${VAR_STRING} "False" PARENT_SCOPE )
+	ENDIF( ${VAR_BOOL} )
+ENDFUNCTION( STRING_FROM_BOOL)
+
+STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_COORDINATE_TRANSFORM" "BUILD_EXAMPLE_COORDINATE_TRANSFORM" )
+STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_PROJECTIVE_TRANSFORM" "BUILD_EXAMPLE_PROJECTIVE_TRANSFORM" )
+STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_CONVEX_HULL" "BUILD_EXAMPLE_CONVEX_HULL" )
+STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_OPERATIONS" "BUILD_EXAMPLE_OPERATIONS" )
+
+INCLUDE(conan.cmake)
+conan_cmake_run(
+	CONANFILE ../conanfile.py
+	BASIC_SETUP CMAKE_TARGETS
+	GENERATORS cmake_multi
+	OPTIONS Geometry:build_test_convex_hull=${STR_BUILD_EXAMPLE_CONVEX_HULL}
+			Geometry:build_test_coordinate_transform=${STR_BUILD_EXAMPLE_COORDINATE_TRANSFORM}
+			Geometry:build_test_operations=${STR_BUILD_EXAMPLE_OPERATIONS}
+			Geometry:build_test_projective_transform=${STR_BUILD_EXAMPLE_PROJECTIVE_TRANSFORM}
+	BUILD missing)
 
 INCLUDE_DIRECTORIES(
 	../include
@@ -60,7 +84,7 @@ SOURCE_GROUP( "Header Files\\QVM" FILES ${INCLUDE_FILES_QVM} )
 
 SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Algorithms")
 
-IF(BUILD_EXAMPLES)
+IF( BUILD_EXAMPLE_COORDINATE_TRANSFORM OR BUILD_EXAMPLE_PROJECTIVE_TRANSFORM OR BUILD_EXAMPLE_CONVEX_HULL OR BUILD_EXAMPLE_OPERATIONS )
 	ADD_SUBDIRECTORY( ../test ${CMAKE_CURRENT_BINARY_DIR}/test )
 ENDIF()
 
