Updated build system. Removed library version conflicts. conan.cmake somehow stopped working with workspace so need to manually invoke conan again.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -9,29 +9,13 @@ SET( BUILD_EXAMPLE_OPERATIONS OFF CACHE BOOL "-" )
 
 PROJECT( Geometry )
 
-FUNCTION( STRING_FROM_BOOL VAR_STRING VAR_BOOL )
-	IF( ${VAR_BOOL} )
-		SET( ${VAR_STRING} "True" PARENT_SCOPE )
-	ELSE( ${VAR_BOOL} )
-		SET( ${VAR_STRING} "False" PARENT_SCOPE )
-	ENDIF( ${VAR_BOOL} )
-ENDFUNCTION( STRING_FROM_BOOL)
+IF(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo_multi.cmake)
+    INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo_multi.cmake)
+ELSE()
+    INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
+ENDIF()
 
-STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_COORDINATE_TRANSFORM" "BUILD_EXAMPLE_COORDINATE_TRANSFORM" )
-STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_PROJECTIVE_TRANSFORM" "BUILD_EXAMPLE_PROJECTIVE_TRANSFORM" )
-STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_CONVEX_HULL" "BUILD_EXAMPLE_CONVEX_HULL" )
-STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_OPERATIONS" "BUILD_EXAMPLE_OPERATIONS" )
-
-INCLUDE(conan.cmake)
-conan_cmake_run(
-	CONANFILE ../conanfile.py
-	BASIC_SETUP CMAKE_TARGETS
-	GENERATORS cmake_multi
-	OPTIONS Geometry:build_test_convex_hull=${STR_BUILD_EXAMPLE_CONVEX_HULL}
-			Geometry:build_test_coordinate_transform=${STR_BUILD_EXAMPLE_COORDINATE_TRANSFORM}
-			Geometry:build_test_operations=${STR_BUILD_EXAMPLE_OPERATIONS}
-			Geometry:build_test_projective_transform=${STR_BUILD_EXAMPLE_PROJECTIVE_TRANSFORM}
-	BUILD missing)
+CONAN_BASIC_SETUP(TARGETS)
 
 INCLUDE_DIRECTORIES(
 	../include
@@ -76,8 +60,8 @@ ADD_LIBRARY( ${PROJECT_NAME} STATIC
 
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
 	CONAN_PKG::NamedType
-	CONAN_PKG::eigen
-	CONAN_PKG::boost_qvm
+	CONAN_PKG::Eigen3
+	CONAN_PKG::boost
 )
 
 SOURCE_GROUP( "Header Files\\QVM" FILES ${INCLUDE_FILES_QVM} )
